adjust timeOut + add UI Result Page

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.results-container {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  font-size: 1.75em;
+  line-height: 1.75em;
+  animation: slide-in .4s ease;
+}
+
+.results-total {
+  margin-top: 15px;
+  font-size: 1.1em;
+}
+
+.results-container a {
+  position: relative;
+  padding: 15px 30px;
+  margin-top: 30px;
+  border: 3px solid #111;
+  background: none;
+  cursor: pointer;
+  font-size: .75em;
+  transition: background .2s;
+}
